promotion페이지 정리완료/ home페이지 마무리작업진행중

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -190,6 +190,54 @@
         </div>
         <!-- @@include ../page_include/layout_list_typ_02.html -->
 
+        <div class="promo_only color_2">
+          <h2 class="heading_1">list type 03</h2>
+          <p class="heading_4">type : 작은이미지 list</p>
+        </div>
+        <div class="list_type con-m con_pd page_about"> <!-- page_about 빼기 -->
+          <!-- typ_list_wrap -->
+          <div class="typ_list_wrap">
+            <ul class="custom_wrap">
+              <li>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
+                    <p class="heading_4">500+ Podcast</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
+                    <p class="heading_4">24M Views</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
+                    <p class="heading_4">600k Subs</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <!-- //typ_list_wrap -->
+        </div>
 
         <div class="promo_only color_2">
           <h2 class="heading_1">banner</h2>
@@ -208,23 +256,9 @@
           </div>
         </div>
 
-        <div class="con-m page_podcast"> <!-- page_podcast는 podcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
-          <div class="layout_banner_wrap">
-            <div>
-              <p class="heading_1">Become The Hero Of Your Own Story</p>
-              <p class="heading_5 sub_txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
-                volutpat ut netus malesuada enim penatibus non aliquet.
-              </p>
-              <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
-            </div>
-          </div>
-        </div>
-
-
         <div class="promo_only color_2">
           <h2 class="heading_1">top section</h2>
+          <p class="heading_4">type : 텍스트와 이미지의 나열</p>
         </div>
         <div class="top_sec_wrap con_pd page_s_podcast"><!-- page_s_podcast 페이지에 넣는 컴포넌트-->
           <div class="top_img_wrap">
@@ -242,21 +276,6 @@
           </div>
         </div>
 
-        <div class="top_sec_wrap con_pd con-m page_blog"><!-- con-m빼고 가져가기 / page_blog페이지에 넣는 컴포넌트-->
-          <div class="top_img_wrap reverse">
-            <img src="../assets/images/contents/main_blog.png" alt="featured_img">
-          </div>
-          <div class="typ_sec typ_sec_01">
-            <h2>Featured</h2>
-            <p class="heading_2 top_sub_01">Should I raise money for my startup, or not?</p>
-            <p class="top_sub_txt_02">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-              sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            </p>
-            <a href="#none" class="btn_typ_02 btn_read">Read Now</a>
-          </div>
-        </div>
-
         <div class="top_sec_wrap con-m sec_fir page_home"> <!-- page_home 빼기 -->
           <div class="top_img_wrap reverse">
             <img src="../assets/images/contents/main_con_1.png" alt="podcast img">
@@ -270,39 +289,9 @@
           </div>
         </div>
 
-        <div class="top_sec_wrap con-m sec_secon page_home"> <!-- page_home 빼기 -->
-          <div class="top_img_wrap">
-            <img src="../assets/images/contents/main_con_1.png" alt="my origins img">
-            <button type="button" class="heading_2 bnt_video btn_1">350+ Videos</button>
-          </div>
-          <div class="typ_sec typ_sec_03">
-            <p class="heading_2 top_sub_01">My origins on <span>YouTube</span> in 2008</p>
-            <p class="top_sub_txt_02">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
-              volutpat ut netus malesuada enim penatibus non aliquet.
-            </p>
-          </div>
-        </div>
-
-        <div class="top_sec_wrap con_pd con-m sec_thir page_host"> <!-- page_host 빼기 -->
-          <div class="top_img_wrap reverse">
-            <img src="../assets/images/contents/big_dream.png" alt="big_dream img">
-          </div>
-          <div class="typ_sec typ_sec_03">
-            <p class="heading_2 top_sub_01">A small story about a big dream  —  </p>
-            <p class="top_sub_txt_02 sub_txt">
-              Apparently we had reached a great height in the atmosphere, for the
-              sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon
-            </p>
-            <p class="top_sub_txt_03 sub_txt">
-              Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and
-            </p>
-          </div>
-        </div>
-
         <div class="promo_only color_2">
-          <h2 class="heading_1">single blog, single_podcast</h2>
+          <h2 class="heading_1">text type</h2>
+          <p class="heading_4">type : 텍스트 나열</p>
         </div>
         <!-- producer_post -->
         <div class="producer_post">
@@ -367,55 +356,6 @@
           <!-- //producer_post_wrap : 공통 -->
         </div>
         <!-- //producer post -->
-
-
-        <div class="promo_only color_2">
-          <h2 class="heading_1">about</h2>
-        </div>
-        <div class="list_type con-m con_pd page_about"> <!-- page_about 빼기 -->
-          <!-- typ_list_wrap -->
-          <div class="typ_list_wrap">
-            <ul class="custom_wrap">
-              <li>
-                <div class="custom_item">
-                  <div class="my_review">
-                    <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
-                    <p class="heading_4">500+ Podcast</p>
-                  </div>
-                  <div class="heading_5 icon_desc">
-                    Apparently we had reached a great height in the atmosphere,
-                    for the sky was a dead black, and the stars had ceased to twinkle.
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="custom_item">
-                  <div class="my_review">
-                    <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
-                    <p class="heading_4">24M Views</p>
-                  </div>
-                  <div class="heading_5 icon_desc">
-                    Apparently we had reached a great height in the atmosphere,
-                    for the sky was a dead black, and the stars had ceased to twinkle.
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="custom_item">
-                  <div class="my_review">
-                    <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
-                    <p class="heading_4">600k Subs</p>
-                  </div>
-                  <div class="heading_5 icon_desc">
-                    Apparently we had reached a great height in the atmosphere,
-                    for the sky was a dead black, and the stars had ceased to twinkle.
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <!-- //typ_list_wrap -->
-        </div>
 
         <!-- @@include ../page_include/footer_sponsors.html -->
         <!-- //contents -->
