--- a/pages/home.html
+++ b/pages/home.html
@@ -114,8 +114,8 @@
         </section>
 
           <div class="top_sec_wrap con-m sec_fir">
-            <div class="top_img_wrap reverse">
-              <img src="../assets/images/contents/main_con_1.png" alt="podcast img">
+            <div class="top_img_wrap reverse typ_01_img">
+              <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img">
             </div>
             <div class="typ_sec typ_sec_03">
               <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
