home 페이지 스와이프 작업중

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -5,7 +5,6 @@
 <!-- wrapper -->
 <div id="wrapper">
   <div class="container">
-    <!-- @@include ../page_include/header.html -->
 
       <div id="contents" class="page_home">
         <div class="home_wrap">
@@ -46,18 +45,24 @@
             </div>
         </section>
 
-          <div class="top_sec_wrap con-m sec_fir">
-            <div class="top_img_wrap reverse typ_01_img">
-              <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img">
-            </div>
-            <div class="typ_sec typ_sec_03">
-              <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
-              <p class="top_sub_txt_02">
-                Apparently we had reached a great height in the atmosphere,
-                for the sky was a dead black, and the stars had ceased to twinkle.
+        <div class="top_sec_wrap con-m sec_fir">
+          <div class="top_img_wrap reverse typ_01_img">
+            <div class="img_only ">
+              <p class="">
+                <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img" >
+                <img src="../assets/images/contents/main_con_1.png" alt="makers_profile img" >
+                <img src="../assets/images/contents/articles_2.png" alt="makers_profile img" >
               </p>
             </div>
           </div>
+          <div class="typ_sec typ_sec_03">
+            <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
+            <p class="top_sub_txt_02">
+              Apparently we had reached a great height in the atmosphere,
+              for the sky was a dead black, and the stars had ceased to twinkle.
+            </p>
+          </div>
+        </div>
 
           <div class="top_sec_wrap con-m sec_secon">
             <div class="top_img_wrap">
@@ -148,8 +153,6 @@
         </div><!-- //home_wrap -->
       </div>
       <!-- //contents -->
-
-      <!-- @@include ../page_include/footer.html -->
   </div>
     <!-- //container -->
 </div>
