--- a/pages/home.html
+++ b/pages/home.html
@@ -16,63 +16,6 @@
 <!-- wrapper -->
 <div id="wrapper">
   <div class="container">
-<!-- header -->
-<header>
-    <h1>
-      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
-    </h1>
-
-    <!-- gnb -->
-    <nav>
-      <div class="gnb">
-
-        <!-- mo_hamburger -->
-        <div class="mo_hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-        <!-- //mo_hamburger -->
-
-        <div class="bg_gray"></div>
-
-        <div class="sub_menu">
-          <ul class="menu">
-            <li><a href="podcast.html">Podcasts</a></li>
-            <li><a href="host.html">Host</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-
-          <ul class="sns">
-            <li><a href="https://ko-kr.facebook.com/facebook/" class="facebook_b"></a></li>
-            <li><a href="https://www.figma.com/file/q4jTVMDIpHbB7AXcZb3fSj/Client-First-Template-8---Podcast-(Community)?node-id=292%3A972" class="linkedIn_b"></a></li>
-            <li><a href="https://www.instagram.com/" class="instagram_b"></a></li>
-          </ul>
-        </div>
-
-      </div>
-    </nav>
-    <!-- //gnb -->
-</header>
-<!-- //header -->
-
-<script>
-
-  const burger = document.querySelector('.mo_hamburger');
-  const sub = document.querySelector('.sub_menu');
-  const bgOn = document.querySelector('.bg_gray');
-
-  burger.addEventListener('click', () => {
-    burger.classList.toggle('toggle');
-    // 수정필요 .contents oh
-    sub.classList.toggle('mo_menu_on')
-    bgOn.classList.toggle('mo_bg_on')
-    document.body.classList.toggle('no_scroll')
-  })
-
-</script>
 
       <div id="contents" class="page_home">
         <div class="home_wrap">
@@ -113,18 +56,24 @@
             </div>
         </section>
 
-          <div class="top_sec_wrap con-m sec_fir">
-            <div class="top_img_wrap reverse typ_01_img">
-              <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img">
-            </div>
-            <div class="typ_sec typ_sec_03">
-              <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
-              <p class="top_sub_txt_02">
-                Apparently we had reached a great height in the atmosphere,
-                for the sky was a dead black, and the stars had ceased to twinkle.
+        <div class="top_sec_wrap con-m sec_fir">
+          <div class="top_img_wrap reverse typ_01_img">
+            <div class="img_only ">
+              <p class="">
+                <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img" >
+                <img src="../assets/images/contents/main_con_1.png" alt="makers_profile img" >
+                <img src="../assets/images/contents/articles_2.png" alt="makers_profile img" >
               </p>
             </div>
           </div>
+          <div class="typ_sec typ_sec_03">
+            <p class="heading_2 top_sub_01">A podcast for makers and entrepreneurs</p>
+            <p class="top_sub_txt_02">
+              Apparently we had reached a great height in the atmosphere,
+              for the sky was a dead black, and the stars had ceased to twinkle.
+            </p>
+          </div>
+        </div>
 
           <div class="top_sec_wrap con-m sec_secon">
             <div class="top_img_wrap">
@@ -317,62 +266,6 @@
         </div><!-- //home_wrap -->
       </div>
       <!-- //contents -->
-
-<!-- footer -->
-<footer>
-  <!-- footer_con -->
-  <div class="footer_con">
-    <div class="logo_wrap">
-      <a href="home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
-    </div>
-
-    <div class="pages">
-      <h4>Pages</h4>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
-        <li><a href="host.html">Host</a></li>
-        <li><a href="blog.html">Blog</a></li>
-      </ul>
-    </div>
-
-    <div class="reach_us">
-      <h4>Reach Us</h4>
-      <ul>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </div>
-
-    <div class="subscribe">
-      <h4>Subscribe</h4>
-      <ul>
-        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
-      </ul>
-    </div>
-    <!-- dark_mode -->
-    <!-- <input class="dark_mode" type="checkbox"> -->
-
-    <div class="button-cover">
-      <div class="turn">
-        <input type="checkbox" class="switch_chk dark_mode">
-        <div class="sun"></div>
-        <div class="moon"></div>
-      </div>
-    </div>
-
-    <!-- // dark_mode -->
-  </div>
-
-  <div class="copyright">
-    <em>© Copyright Finsweet 2021</em>
-  </div>
-
-</footer>
-<!-- //footer -->
   </div>
     <!-- //container -->
 </div>
