js 정리 / header footer 추가

--- a/dev/page_dev/contact.html
+++ b/dev/page_dev/contact.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_contact">
@@ -81,8 +82,10 @@
         </div>
         <!-- //contact_us -->
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
-
+    
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 
