--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_about">
@@ -226,8 +227,10 @@
         <!-- //recent_episodes -->
 
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 
