--- a/dev/page_dev/blog.html
+++ b/dev/page_dev/blog.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_blog">
@@ -116,8 +117,9 @@
         <!-- //all_blogs -->
 
       </div>
+      <!-- @@include ../page_include/layout_your_inbox.html -->
       <!-- //contents -->
-
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 
