--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_host">
@@ -146,8 +147,10 @@
           <!-- //recent_episodes -->
         </div>
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 </div>
