--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_podcast">
@@ -73,55 +74,14 @@
 
         </div>
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
-
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 
 </div>
 <!-- //wrapper -->
-
-<script>
-function categoryOn() {
-  const itemTab = document.querySelector('.category_podcasts')
-  const item = document.querySelectorAll('.page_podcast .data li')
-  const btn = document.querySelectorAll('.page_podcast .cate_pod')
-
-  itemTab.addEventListener('click', (e) => {
-    const filter = e.target.dataset.filter || e.target.parentNode.dataset.filter;
-    if (filter == null) {
-      return;
-    }
-    item.forEach((item) => {
-      if (filter === '*' || filter === item.dataset.type) {
-        item.style.display = "block";
-      } else {
-        item.style.display = "none";
-
-      }
-    });
-  });
-
-}
-
-categoryOn();
-
-function classOn() {
-
-  const btns = document.querySelectorAll('.page_podcast .cate_pod')
-
-  Array.from(btns).forEach(item => {
-      item.addEventListener("click", () => {
-         var selected = document.getElementsByClassName("on");
-         selected[0].className = selected[0].className.replace(" on", "");
-         item.className += " on";
-      });
-   });
-
-}
-
-classOn();
-</script>
 
 <!-- @@close -->
 
