--- a/dev/page_dev/single_blog.html
+++ b/dev/page_dev/single_blog.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_single_blog">
@@ -95,9 +96,10 @@
                 <!-- read_our_articles / include layout_list_typ_02 -->
                 <!-- @@include ../page_include/layout_list_typ_02.html -->
                 <!-- //read_our_articles / include layout_list_typ_02 -->
-              </div>
+      </div>
+      <!-- @@include ../page_include/layout_your_inbox.html -->
       <!-- //contents -->
-
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 
