--- a/dev/page_dev/single_podcast.html
+++ b/dev/page_dev/single_podcast.html
@@ -7,6 +7,7 @@
 
   <!-- container -->
   <div class="container">
+    <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
       <div id="contents" class="page_single_podcast">
@@ -150,8 +151,10 @@
         <!-- @@include ../page_include/layout_list_typ_01.html -->
         <!-- //recent_episodes -->
       </div>
+      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
+    <!-- @@include ../page_include/footer.html -->
   </div>
   <!-- //container -->
 </div>
