--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="quick_top">
-        <a href="" class="btn_top"></a>
+        <a href="#none" class="btn_top"></a>
       </div>
 
     </div>
@@ -49,69 +49,3 @@
   <!-- //gnb -->
 </header>
 <!-- //header -->
-
-<script>
-
-//gnb js
-function gnb() {
-
-const burger = document.querySelector('.mo_hamburger');
-const sub = document.querySelector('.sub_menu');
-const bgOn = document.querySelector('.bg_gray');
-
-burger.addEventListener('click', () => {
-  burger.classList.toggle('toggle');
-  sub.classList.toggle('mo_menu_on')
-  bgOn.classList.toggle('mo_bg_on')
-  document.body.classList.toggle('no_scroll')
-})
-
-}
-
-gnb();
-
-// scrollTop js
-function scrollTop() {
-
-const btn = document.querySelector('.btn_top')
-
-window.addEventListener('scroll', () => {
-  if (document.querySelector('html').scrollTop > 100) {
-    btn.classList.remove('dn');
-    btn.classList.add('db');
-  } else {
-    btn.classList.remove('db');
-    btn.classList.add('dn');
-  }
-});
-
-btn.addEventListener('click', () => {
-  window.scrollTo({
-    top: 0,
-    behavior: 'smooth'
-  });
-})
-
-}
-
-scrollTop()
-
-function headerFixed() {
-
-const header = document.querySelector("header");
-const headerHeight = header.offsetHeight;
-
-window.onscroll = function () {
-  const windowTop = window.scrollY;
-  if (windowTop >= headerHeight) {
-    header.classList.add("drop");
-  } 
-  else {
-    header.classList.remove("drop");
-  }
-};
-
-}
-
-headerFixed()
-</script>
