--- a/pages/single_blog.html
+++ b/pages/single_blog.html
@@ -18,6 +18,57 @@
 
   <!-- container -->
   <div class="container">
+<!-- header -->
+<header>
+  <h1>
+    <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+  </h1>
+
+  <!-- gnb -->
+  <nav>
+    <div class="gnb">
+
+      <!-- mo_hamburger -->
+      <div class="mo_hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+      <!-- //mo_hamburger -->
+
+      <div class="bg_gray"></div>
+
+      <div class="sub_menu">
+
+        <!-- menu -->
+        <ul class="menu">
+          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="host.html">Host</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <!-- //menu -->
+
+        <!-- sns -->
+        <ul class="sns">
+          <li><a href="https://ko-kr.facebook.com/facebook/" class="facebook_b"><span class="blind">go to facebook</span></a></li>
+          <li><a href="https://www.figma.com/file/q4jTVMDIpHbB7AXcZb3fSj/Client-First-Template-8---Podcast-(Community)?node-id=292%3A972" class="linkedIn_b"><span class="blind">go to linkedIn</span></a></li>
+          <li><a href="https://www.instagram.com/" class="instagram_b"><span class="blind">go to instagram</span></a></li>
+        </ul>
+        <!-- //sns -->
+
+      </div>
+
+      <div class="quick_top">
+        <a href="#none" class="btn_top"></a>
+      </div>
+
+    </div>
+  </nav>
+  <!-- //gnb -->
+</header>
+<!-- //header -->
 
       <!-- contents -->
       <div id="contents" class="page_single_blog">
@@ -148,9 +199,76 @@
 
 
                 <!-- //read_our_articles / include layout_list_typ_02 -->
-              </div>
+      </div>
+<!-- layout_your_inbox -->
+<div class="footer_top con_pd">
+  <div class="inbox_wrap">
+    <div class="inbox">
+      <p class="heading_2">Receive new episodes in your inbox.</p>
+      <p class="email_send">
+        <input type="email" placeholder="Enter Your Email Id">
+        <input type="submit" value="Subscribe">
+      </p>
+    </div>
+  </div>
+</div>
+<!-- //layout_your_inbox -->
       <!-- //contents -->
+<!-- footer -->
+<footer>
+  <!-- footer_con -->
+  <div class="footer_con">
+    <div class="logo_wrap">
+      <a href="home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
 
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <!-- <input class="dark_mode" type="checkbox"> -->
+
+    <div class="button-cover">
+      <div class="turn">
+        <input type="checkbox" class="switch_chk dark_mode">
+        <div class="sun"></div>
+        <div class="moon"></div>
+      </div>
+    </div>
+
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
   </div>
   <!-- //container -->
 
