--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,57 @@
 <!-- wrapper -->
 <div id="wrapper">
   <div class="container">
+<!-- header -->
+<header>
+  <h1>
+    <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+  </h1>
 
+  <!-- gnb -->
+  <nav>
+    <div class="gnb">
+
+      <!-- mo_hamburger -->
+      <div class="mo_hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+      <!-- //mo_hamburger -->
+
+      <div class="bg_gray"></div>
+
+      <div class="sub_menu">
+
+        <!-- menu -->
+        <ul class="menu">
+          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="host.html">Host</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <!-- //menu -->
+
+        <!-- sns -->
+        <ul class="sns">
+          <li><a href="https://ko-kr.facebook.com/facebook/" class="facebook_b"><span class="blind">go to facebook</span></a></li>
+          <li><a href="https://www.figma.com/file/q4jTVMDIpHbB7AXcZb3fSj/Client-First-Template-8---Podcast-(Community)?node-id=292%3A972" class="linkedIn_b"><span class="blind">go to linkedIn</span></a></li>
+          <li><a href="https://www.instagram.com/" class="instagram_b"><span class="blind">go to instagram</span></a></li>
+        </ul>
+        <!-- //sns -->
+
+      </div>
+
+      <div class="quick_top">
+        <a href="#none" class="btn_top"></a>
+      </div>
+
+    </div>
+  </nav>
+  <!-- //gnb -->
+</header>
+<!-- //header -->
       <div id="contents" class="page_home">
         <div class="home_wrap">
           <div class="main_top">
@@ -58,12 +108,18 @@
 
         <div class="top_sec_wrap con-m sec_fir">
           <div class="top_img_wrap reverse typ_01_img">
-            <div class="img_only ">
-              <p class="">
-                <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img" >
-                <img src="../assets/images/contents/main_con_1.png" alt="makers_profile img" >
-                <img src="../assets/images/contents/articles_2.png" alt="makers_profile img" >
-              </p>
+            <div class="img_only swiper tImgSwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="../assets/images/contents/makers_profile.png" alt="makers_profile img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="../assets/images/contents/main_con_1.png" alt="makers_profile img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="../assets/images/contents/articles_2.png" alt="makers_profile img">
+                </div>
+              </div>
             </div>
           </div>
           <div class="typ_sec typ_sec_03">
@@ -264,8 +320,79 @@
 
 
         </div><!-- //home_wrap -->
+<!-- footer_sponsors -->
+<div class="footer_top con_pd">
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Sponsors</h3>
+    <div class="logoipsum">
+      <ul>
+        <li><img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum"></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<!-- //footer_sponsors -->
       </div>
       <!-- //contents -->
+<!-- footer -->
+<footer>
+  <!-- footer_con -->
+  <div class="footer_con">
+    <div class="logo_wrap">
+      <a href="home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <!-- <input class="dark_mode" type="checkbox"> -->
+
+    <div class="button-cover">
+      <div class="turn">
+        <input type="checkbox" class="switch_chk dark_mode">
+        <div class="sun"></div>
+        <div class="moon"></div>
+      </div>
+    </div>
+
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
   </div>
     <!-- //container -->
 </div>
