이미지 폴더경로 변경

--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -31,15 +31,29 @@
           <!-- //banner_top_01 -->
 
           <!-- mq_logo_list -->
-          <div class="mq_logo_list">
-            <marquee scrollamount=10>
-              <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
-              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
-              <a href="#none"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
-              <a href="#none"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
-              <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
-            </marquee>
-          </div>
+          <section class="notify-wrap">
+            <div class="notify-wrap-inner ellipsis">
+              <div class="notify-scroll">
+                <ul>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </section>
           <!-- //mq_logo_list -->
 
           <!-- big_dream -->
