--- a/dev/page_dev/single_podcast.html
+++ b/dev/page_dev/single_podcast.html
@@ -10,11 +10,11 @@
     <!-- @@include ../page_include/header.html -->
 
       <!-- contents -->
-      <div id="contents" class="page_single_podcast">
+      <div id="contents" class="page_s_podcast">
 
         <!-- single_podcast_top -->
         <div class="single_podcast_top">
-          <div class="top_sec_wrap con_pd page_s_podcast"><!-- page_s_podcast 페이지에 넣는 컴포넌트-->
+          <div class="top_sec_wrap con_pd">
             <div class="top_img_wrap">
               <img src="../assets/images/contents/common_con_2.png" alt="business_img">
               <a href="#none" class="mute"><i class="ico_mute"></i></a>
@@ -75,7 +75,7 @@
                 </p>
               </div>
             </div>
-            
+
             <!-- pro_po_profile -->
             <div class="pro_po_profile">
               <div class="pro_po_profile_wrap">
