--- a/pages/host.html
+++ b/pages/host.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" color-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,7 +69,6 @@
   <!-- //gnb -->
 </header>
 <!-- //header -->
-
       <!-- contents -->
       <div id="contents" class="page_host">
         <div class="host_wrap">
