--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -1,7 +1,7 @@
 <!-- header -->
 <header>
   <h1>
-    <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    <a href="home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
   </h1>
 
   <!-- gnb -->
