sass합치기 완료 / js파일 수정

--- a/dev/layout_template.html
+++ b/dev/layout_template.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
+    <link rel="short icon" href="#">
     <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../assets/css/display.css">
-    <link rel="stylesheet" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
 <body>
     <!-- @@placeholder=root_content -->
