js수정 (다크모드시 이미지 변경)/ 코드수정

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
 <!-- header -->
 <header>
   <h1>
-    <a href="home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    <a href="home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet" class="logo_img"></a>
   </h1>
 
   <!-- gnb -->
@@ -84,7 +84,7 @@
           <section class="notify-wrap">
             <div class="notify-wrap-inner ellipsis">
               <div class="notify-scroll">
-                <ul>
+                <ul class="light_ver">
                   <li>
                     <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
                   </li>
@@ -99,6 +99,23 @@
                   </li>
                   <li>
                     <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                  </li>
+                </ul>
+                <ul class="dark_ver dark_hide">
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/logoipsum_1.png" alt="podcast_available_on logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
                   </li>
                 </ul>
               </div>
