--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -24,7 +24,7 @@
           <section class="notify-wrap">
             <div class="notify-wrap-inner ellipsis">
               <div class="notify-scroll">
-                <ul>
+                <ul class="light_ver">
                   <li>
                     <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
                   </li>
@@ -39,6 +39,23 @@
                   </li>
                   <li>
                     <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                  </li>
+                </ul>
+                <ul class="dark_ver dark_hide">
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/logoipsum_1.png" alt="podcast_available_on logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound_cloud logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast_w.png" alt="google_podcast logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/spotify_w.png" alt="spotify logo"></a>
                   </li>
                 </ul>
               </div>
