--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -18,7 +18,7 @@
 <!-- header -->
 <header>
   <h1>
-    <a href="home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    <a href="home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet" class="logo_img"></a>
   </h1>
 
   <!-- gnb -->
