수정작업 1차

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -4,6 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <div class="container">
 <!-- @@include ../page_include/header.html -->
       <div id="contents" class="page_home">
@@ -16,9 +19,10 @@
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
               <p class="email_send">
-                <input type="email" placeholder="Enter Your Email Id">
-                <input type="submit" value="Subscribe">
+                <input type="email" placeholder="Enter Your Email Id" class="email_input">
+                <input type="submit" value="Subscribe" class="email_chk">
               </p>
+              <span class="email_txt"></span>
             </div>
           </div>
           <section class="notify-wrap">
