--- a/dev/page_include/footer.html
+++ b/dev/page_include/footer.html
@@ -10,7 +10,7 @@
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
