--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="./pages/promotion.html" target="_blank" title="새창열림">Promotion</a></li>
             <li><a href="./pages/home.html" target="_blank" title="새창열림">Home</a></li>
             <li><a href="./pages/host.html" target="_blank" title="새창열림">Host</a></li>
-            <li><a href="./pages/podcast.html" target="_blank" title="새창열림">Podcasts</a></li>
+            <li><a href="./pages/podcasts.html" target="_blank" title="새창열림">Podcasts</a></li>
             <li><a href="./pages/single_podcast.html" target="_blank" title="새창열림">Single Podcast</a></li>
             <li><a href="./pages/about.html" target="_blank" title="새창열림">About</a></li>
             <li><a href="./pages/blog.html" target="_blank" title="새창열림">Blog</a></li>
