--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <!-- container -->
   <div class="container">
 <!-- header -->
@@ -41,7 +43,7 @@
 
         <!-- menu -->
         <ul class="menu">
-          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="podcasts.html">Podcasts</a></li>
           <li><a href="host.html">Host</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -365,7 +367,7 @@
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
