--- a/dev/page_dev/blog.html
+++ b/dev/page_dev/blog.html
@@ -4,8 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
-  <!-- container -->
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <div class="container">
     <!-- @@include ../page_include/header.html -->
 
