--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -4,7 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <!-- container -->
   <div class="container">
         <!-- @@include ../page_include/header.html -->
