--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -4,6 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <div class="container">
     <!-- @@include ../page_include/header.html -->
 
