--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <!-- container -->
   <div class="container">
 <!-- header -->
@@ -41,7 +43,7 @@
 
         <!-- menu -->
         <ul class="menu">
-          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="podcasts.html">Podcasts</a></li>
           <li><a href="host.html">Host</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -100,26 +102,30 @@
                 <h3>Subscribe</h3>
 
                 <!-- podcasts -->
-                <ul class="podcasts_list">
+                <ul class="podcasts_list chg_podcasts_list">
                   <li>
                     <div class="podcasts_item">
-                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                      <a href="#none" class="logo_apple light_mode_item"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                      <a href="#none" class="logo_apple dark_mode_item"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a>
                     </div>
                   </li>
                   <li>
                     <div class="podcasts_item">
-                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      <a href="#none" class="logo_sound_cloud light_mode_item"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      <a href="#none" class="logo_sound_cloud dark_mode_item"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a>
                     </div>
   
                   </li>
                   <li>
                     <div class="podcasts_item">
-                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      <a href="#none" class="google_logo light_mode_item"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      <a href="#none" class="google_logo dark_mode_item"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a>
                     </div>
                   </li>
                   <li>
                     <div class="podcasts_item">
-                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      <a href="#none" class="spotify_logo light_mode_item"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      <a href="#none" class="spotify_logo dark_mode_item"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a>
                     </div>
                     </li>
                 </ul>
@@ -128,10 +134,19 @@
 
               <div class="socials">
                 <h3>Socials</h3>
-                <ul class="socials_list">
-                  <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
-                  <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
-                  <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkdIn</span></a></li>
+                <ul class="socials_list chg_socials_list">
+                  <li>
+                    <a href="#none" class="ico_facebook_p light_mode_item"><span class="blind">go to facebook</span></a>
+                    <a href="#none" class="ico_facebook_w dark_mode_item"><span class="blind">go to facebook</span></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="ico_twitter_p light_mode_item"><span class="blind">go to twitter</span></a>
+                    <a href="#none" class="ico_twitter_w dark_mode_item"><span class="blind">go to twitter</span></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="ico_linkedIn_p light_mode_item"><span class="blind">go to linkdIn</span></a>
+                    <a href="#none" class="ico_linkedIn_w dark_mode_item"><span class="blind">go to linkdIn</span></a>
+                  </li>
                 </ul>
               </div>
 
@@ -172,7 +187,7 @@
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
