--- a/pages/home.html
+++ b/pages/home.html
@@ -14,6 +14,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <div class="container">
 <!-- header -->
 <header>
@@ -39,7 +42,7 @@
 
         <!-- menu -->
         <ul class="menu">
-          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="podcasts.html">Podcasts</a></li>
           <li><a href="host.html">Host</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -76,9 +79,10 @@
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
               <p class="email_send">
-                <input type="email" placeholder="Enter Your Email Id">
-                <input type="submit" value="Subscribe">
+                <input type="email" placeholder="Enter Your Email Id" class="email_input">
+                <input type="submit" value="Subscribe" class="email_chk">
               </p>
+              <span class="email_txt"></span>
             </div>
           </div>
           <section class="notify-wrap">
@@ -366,7 +370,7 @@
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
