--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -14,6 +14,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <div class="skip">
+    <a href="#contents">본문 바로가기</a>
+  </div>
   <div class="container">
 <!-- header -->
 <header>
@@ -39,7 +42,7 @@
 
         <!-- menu -->
         <ul class="menu">
-          <li><a href="podcast.html">Podcasts</a></li>
+          <li><a href="podcasts.html">Podcasts</a></li>
           <li><a href="host.html">Host</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -588,7 +591,7 @@
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcast.html">Podcasts</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
