0105 이메일주소 유효성 검사 추가

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -185,10 +185,10 @@
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
-      <p class="email_send">
+      <form action="#none" class="email_send">
         <input type="email" placeholder="Enter Your Email Id">
         <input type="submit" value="Subscribe">
-      </p>
+      </form>
     </div>
   </div>
 </div>
