--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,13 +88,13 @@
                 <p>Interested in collaborating? Please fill the form below.</p>
               </div>
 
-              <div class="contact_input">
-                <input type="text" placeholder="Your full Name">
+              <form class="contact_input">
+                <input type="text" placeholder="Your full Name" required>
                 <input type="email" placeholder="Your Email Id">
                 <input type="text" placeholder="Query Related">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                 <input type="submit" value="Subscribe">
-              </div>
+              </form>
 
             </div>
 
