--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -18,10 +18,10 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
-              <p class="email_send">
+              <form class="email_send" action="#none">
                 <input type="email" placeholder="Enter Your Email Id" class="email_input">
                 <input type="submit" value="Subscribe" class="email_chk">
-              </p>
+              </form>
               <span class="email_txt"></span>
             </div>
           </div>
