--- a/pages/home.html
+++ b/pages/home.html
@@ -80,10 +80,10 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
-              <p class="email_send">
+              <form class="email_send" action="#none">
                 <input type="email" placeholder="Enter Your Email Id" class="email_input">
                 <input type="submit" value="Subscribe" class="email_chk">
-              </p>
+              </form>
               <span class="email_txt"></span>
             </div>
           </div>
@@ -331,10 +331,10 @@
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
-      <p class="email_send">
+      <form action="#none" class="email_send">
         <input type="email" placeholder="Enter Your Email Id">
         <input type="submit" value="Subscribe">
-      </p>
+      </form>
     </div>
   </div>
 </div>
