0105 이메일주소 유효성 검사 추가

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -18,7 +18,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
-              <form class="email_send" action="#none">
+              <form class="email_send" action="javascript:alert('구독이 정상적으로 신청되었습니다.');">
                 <input type="email" placeholder="Enter Your Email Id" class="email_input">
                 <input type="submit" value="Subscribe" class="email_chk">
               </form>
