--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,7 +88,7 @@
                 <p>Interested in collaborating? Please fill the form below.</p>
               </div>
 
-              <form class="contact_input">
+              <form class="contact_input" action="javascript:alert('메시지가 정상적으로 발송되었습니다.');">
                 <input type="text" placeholder="Your full Name" required>
                 <input type="email" placeholder="Your Email Id">
                 <input type="text" placeholder="Query Related">
