--- a/pages/home.html
+++ b/pages/home.html
@@ -80,7 +80,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
               </p>
-              <form class="email_send" action="#none">
+              <form class="email_send" action="javascript:alert('구독이 정상적으로 신청되었습니다.');">
                 <input type="email" placeholder="Enter Your Email Id" class="email_input">
                 <input type="submit" value="Subscribe" class="email_chk">
               </form>
@@ -331,7 +331,7 @@
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
-      <form action="#none" class="email_send">
+      <form action="javascript:alert('구독이 정상적으로 신청되었습니다.');" class="email_send">
         <input type="email" placeholder="Enter Your Email Id">
         <input type="submit" value="Subscribe">
       </form>
