--- a/pages/single_blog.html
+++ b/pages/single_blog.html
@@ -208,7 +208,7 @@
   <div class="inbox_wrap">
     <div class="inbox">
       <p class="heading_2">Receive new episodes in your inbox.</p>
-      <form action="#none" class="email_send">
+      <form action="javascript:alert('구독이 정상적으로 신청되었습니다.');" class="email_send">
         <input type="email" placeholder="Enter Your Email Id">
         <input type="submit" value="Subscribe">
       </form>
